
// AUTOGENERATED!!! Do not modify! Your changes will be lost after .tt template regenerates.
// Modify the .tt template instead!

syntax = "proto3";

package rfmk.resonite;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "primitives.proto";

/////////////////
// The Monster //
/////////////////


message Member {
  oneof kind {
    Empty empty = 1;
    Reference reference = 2;
    SyncList sync_list = 3;
    SyncObject sync_object = 4;
    FieldEnum enum = 5;
    FieldNullableEnum null_enum = 6;
    FieldByte byte = 7;
    ArrayByte array_byte = 8;
    FieldNullableByte null_byte = 9;
    FieldUShort ushort = 10;
    ArrayUShort array_ushort = 11;
    FieldNullableUShort null_ushort = 12;
    FieldUInt uint = 13;
    ArrayUInt array_uint = 14;
    FieldNullableUInt null_uint = 15;
    FieldULong ulong = 16;
    ArrayULong array_ulong = 17;
    FieldNullableULong null_ulong = 18;
    FieldSByte sbyte = 19;
    ArraySByte array_sbyte = 20;
    FieldNullableSByte null_sbyte = 21;
    FieldShort short = 22;
    ArrayShort array_short = 23;
    FieldNullableShort null_short = 24;
    FieldInt int = 25;
    ArrayInt array_int = 26;
    FieldNullableInt null_int = 27;
    FieldLong long = 28;
    ArrayLong array_long = 29;
    FieldNullableLong null_long = 30;
    FieldFloat float = 31;
    ArrayFloat array_float = 32;
    FieldNullableFloat null_float = 33;
    FieldDouble double = 34;
    ArrayDouble array_double = 35;
    FieldNullableDouble null_double = 36;
    FieldDecimal decimal = 37;
    ArrayDecimal array_decimal = 38;
    FieldDecimal null_decimal = 39;
    FieldBool bool = 40;
    ArrayBool array_bool = 41;
    FieldNullableBool null_bool = 42;
    FieldChar char = 43;
    ArrayChar array_char = 44;
    FieldNullableChar null_char = 45;
    FieldString string = 46;
    ArrayString array_string = 47;
    FieldUri Uri = 48;
    ArrayUri array_Uri = 49;
    FieldDateTime DateTime = 50;
    ArrayDateTime array_DateTime = 51;
    FieldDateTime null_DateTime = 52;
    FieldTimeSpan TimeSpan = 53;
    ArrayTimeSpan array_TimeSpan = 54;
    FieldTimeSpan null_TimeSpan = 55;
    FieldColor color = 56;
    ArrayColor array_color = 57;
    FieldColor null_color = 58;
    FieldColorX colorX = 59;
    ArrayColorX array_colorX = 60;
    FieldColorX null_colorX = 61;
    FieldColor32 color32 = 62;
    ArrayColor32 array_color32 = 63;
    FieldColor32 null_color32 = 64;
    FieldFloat2 float2 = 65;
    ArrayFloat2 array_float2 = 66;
    FieldFloat2 null_float2 = 67;
    FieldDouble2 double2 = 68;
    ArrayDouble2 array_double2 = 69;
    FieldDouble2 null_double2 = 70;
    FieldByte2 byte2 = 71;
    ArrayByte2 array_byte2 = 72;
    FieldByte2 null_byte2 = 73;
    FieldUshort2 ushort2 = 74;
    ArrayUshort2 array_ushort2 = 75;
    FieldUshort2 null_ushort2 = 76;
    FieldUint2 uint2 = 77;
    ArrayUint2 array_uint2 = 78;
    FieldUint2 null_uint2 = 79;
    FieldUlong2 ulong2 = 80;
    ArrayUlong2 array_ulong2 = 81;
    FieldUlong2 null_ulong2 = 82;
    FieldSbyte2 sbyte2 = 83;
    ArraySbyte2 array_sbyte2 = 84;
    FieldSbyte2 null_sbyte2 = 85;
    FieldShort2 short2 = 86;
    ArrayShort2 array_short2 = 87;
    FieldShort2 null_short2 = 88;
    FieldInt2 int2 = 89;
    ArrayInt2 array_int2 = 90;
    FieldInt2 null_int2 = 91;
    FieldLong2 long2 = 92;
    ArrayLong2 array_long2 = 93;
    FieldLong2 null_long2 = 94;
    FieldBool2 bool2 = 95;
    ArrayBool2 array_bool2 = 96;
    FieldBool2 null_bool2 = 97;
    FieldFloat3 float3 = 98;
    ArrayFloat3 array_float3 = 99;
    FieldFloat3 null_float3 = 100;
    FieldDouble3 double3 = 101;
    ArrayDouble3 array_double3 = 102;
    FieldDouble3 null_double3 = 103;
    FieldByte3 byte3 = 104;
    ArrayByte3 array_byte3 = 105;
    FieldByte3 null_byte3 = 106;
    FieldUshort3 ushort3 = 107;
    ArrayUshort3 array_ushort3 = 108;
    FieldUshort3 null_ushort3 = 109;
    FieldUint3 uint3 = 110;
    ArrayUint3 array_uint3 = 111;
    FieldUint3 null_uint3 = 112;
    FieldUlong3 ulong3 = 113;
    ArrayUlong3 array_ulong3 = 114;
    FieldUlong3 null_ulong3 = 115;
    FieldSbyte3 sbyte3 = 116;
    ArraySbyte3 array_sbyte3 = 117;
    FieldSbyte3 null_sbyte3 = 118;
    FieldShort3 short3 = 119;
    ArrayShort3 array_short3 = 120;
    FieldShort3 null_short3 = 121;
    FieldInt3 int3 = 122;
    ArrayInt3 array_int3 = 123;
    FieldInt3 null_int3 = 124;
    FieldLong3 long3 = 125;
    ArrayLong3 array_long3 = 126;
    FieldLong3 null_long3 = 127;
    FieldBool3 bool3 = 128;
    ArrayBool3 array_bool3 = 129;
    FieldBool3 null_bool3 = 130;
    FieldFloat4 float4 = 131;
    ArrayFloat4 array_float4 = 132;
    FieldFloat4 null_float4 = 133;
    FieldDouble4 double4 = 134;
    ArrayDouble4 array_double4 = 135;
    FieldDouble4 null_double4 = 136;
    FieldByte4 byte4 = 137;
    ArrayByte4 array_byte4 = 138;
    FieldByte4 null_byte4 = 139;
    FieldUshort4 ushort4 = 140;
    ArrayUshort4 array_ushort4 = 141;
    FieldUshort4 null_ushort4 = 142;
    FieldUint4 uint4 = 143;
    ArrayUint4 array_uint4 = 144;
    FieldUint4 null_uint4 = 145;
    FieldUlong4 ulong4 = 146;
    ArrayUlong4 array_ulong4 = 147;
    FieldUlong4 null_ulong4 = 148;
    FieldSbyte4 sbyte4 = 149;
    ArraySbyte4 array_sbyte4 = 150;
    FieldSbyte4 null_sbyte4 = 151;
    FieldShort4 short4 = 152;
    ArrayShort4 array_short4 = 153;
    FieldShort4 null_short4 = 154;
    FieldInt4 int4 = 155;
    ArrayInt4 array_int4 = 156;
    FieldInt4 null_int4 = 157;
    FieldLong4 long4 = 158;
    ArrayLong4 array_long4 = 159;
    FieldLong4 null_long4 = 160;
    FieldBool4 bool4 = 161;
    ArrayBool4 array_bool4 = 162;
    FieldBool4 null_bool4 = 163;
    FieldFloatQ floatQ = 164;
    ArrayFloatQ array_floatQ = 165;
    FieldFloatQ null_floatQ = 166;
    FieldDoubleQ doubleQ = 167;
    ArrayDoubleQ array_doubleQ = 168;
    FieldDoubleQ null_doubleQ = 169;
    FieldFloat2x2 float2x2 = 170;
    ArrayFloat2x2 array_float2x2 = 171;
    FieldFloat2x2 null_float2x2 = 172;
    FieldDouble2x2 double2x2 = 173;
    ArrayDouble2x2 array_double2x2 = 174;
    FieldDouble2x2 null_double2x2 = 175;
    FieldFloat3x3 float3x3 = 176;
    ArrayFloat3x3 array_float3x3 = 177;
    FieldFloat3x3 null_float3x3 = 178;
    FieldDouble3x3 double3x3 = 179;
    ArrayDouble3x3 array_double3x3 = 180;
    FieldDouble3x3 null_double3x3 = 181;
    FieldFloat4x4 float4x4 = 182;
    ArrayFloat4x4 array_float4x4 = 183;
    FieldFloat4x4 null_float4x4 = 184;
    FieldDouble4x4 double4x4 = 185;
    ArrayDouble4x4 array_double4x4 = 186;
    FieldDouble4x4 null_double4x4 = 187;
  }
}

/////////////////
// Field Kinds //
/////////////////

message Empty {
  string id = 1;
}

message Reference {
  string id = 1;
  google.protobuf.StringValue target_id = 2;
  string targetType = 3;
}

message SyncList {
  string id = 1;
  repeated Member elements = 2;
}

message SyncObject {
  string id = 1;
  map<string, Member> members = 2;
}

message FieldEnum {
  string id = 1;
  string value = 2;
  string enum_type = 3;
}

message FieldNullableEnum {
  string id = 1;
  google.protobuf.StringValue value = 2;
  string enum_type = 3;
}

message FieldByte {
  string id = 1;
  uint32 value = 2;
}

message ArrayByte {
  string id = 1;
  repeated uint32 values = 2;
}

message FieldNullableByte {
  string id = 1;
  google.protobuf.UInt32Value value = 2;
}

message FieldUShort {
  string id = 1;
  uint32 value = 2;
}

message ArrayUShort {
  string id = 1;
  repeated uint32 values = 2;
}

message FieldNullableUShort {
  string id = 1;
  google.protobuf.UInt32Value value = 2;
}

message FieldUInt {
  string id = 1;
  uint32 value = 2;
}

message ArrayUInt {
  string id = 1;
  repeated uint32 values = 2;
}

message FieldNullableUInt {
  string id = 1;
  google.protobuf.UInt32Value value = 2;
}

message FieldULong {
  string id = 1;
  uint64 value = 2;
}

message ArrayULong {
  string id = 1;
  repeated uint64 values = 2;
}

message FieldNullableULong {
  string id = 1;
  google.protobuf.UInt64Value value = 2;
}

message FieldSByte {
  string id = 1;
  int32 value = 2;
}

message ArraySByte {
  string id = 1;
  repeated int32 values = 2;
}

message FieldNullableSByte {
  string id = 1;
  google.protobuf.Int32Value value = 2;
}

message FieldShort {
  string id = 1;
  int32 value = 2;
}

message ArrayShort {
  string id = 1;
  repeated int32 values = 2;
}

message FieldNullableShort {
  string id = 1;
  google.protobuf.Int32Value value = 2;
}

message FieldInt {
  string id = 1;
  int32 value = 2;
}

message ArrayInt {
  string id = 1;
  repeated int32 values = 2;
}

message FieldNullableInt {
  string id = 1;
  google.protobuf.Int32Value value = 2;
}

message FieldLong {
  string id = 1;
  int64 value = 2;
}

message ArrayLong {
  string id = 1;
  repeated int64 values = 2;
}

message FieldNullableLong {
  string id = 1;
  google.protobuf.Int64Value value = 2;
}

message FieldFloat {
  string id = 1;
  float value = 2;
}

message ArrayFloat {
  string id = 1;
  repeated float values = 2;
}

message FieldNullableFloat {
  string id = 1;
  google.protobuf.FloatValue value = 2;
}

message FieldDouble {
  string id = 1;
  double value = 2;
}

message ArrayDouble {
  string id = 1;
  repeated double values = 2;
}

message FieldNullableDouble {
  string id = 1;
  google.protobuf.DoubleValue value = 2;
}

message FieldDecimal {
  string id = 1;
  Decimal value = 2;
}

message ArrayDecimal {
  string id = 1;
  repeated Decimal values = 2;
}

message FieldBool {
  string id = 1;
  bool value = 2;
}

message ArrayBool {
  string id = 1;
  repeated bool values = 2;
}

message FieldNullableBool {
  string id = 1;
  google.protobuf.BoolValue value = 2;
}

message FieldChar {
  string id = 1;
  uint32 value = 2;
}

message ArrayChar {
  string id = 1;
  repeated uint32 values = 2;
}

message FieldNullableChar {
  string id = 1;
  google.protobuf.UInt32Value value = 2;
}

message FieldString {
  string id = 1;
  google.protobuf.StringValue value = 2;
}

message ArrayString {
  string id = 1;
  repeated google.protobuf.StringValue values = 2;
}

message FieldUri {
  string id = 1;
  google.protobuf.StringValue value = 2;
}

message ArrayUri {
  string id = 1;
  repeated google.protobuf.StringValue values = 2;
}

message FieldDateTime {
  string id = 1;
  google.protobuf.Timestamp value = 2;
}

message ArrayDateTime {
  string id = 1;
  repeated google.protobuf.Timestamp values = 2;
}

message FieldTimeSpan {
  string id = 1;
  google.protobuf.Duration value = 2;
}

message ArrayTimeSpan {
  string id = 1;
  repeated google.protobuf.Duration values = 2;
}

message FieldColor {
  string id = 1;
  Color value = 2;
}

message ArrayColor {
  string id = 1;
  repeated Color values = 2;
}

message FieldColorX {
  string id = 1;
  ColorX value = 2;
}

message ArrayColorX {
  string id = 1;
  repeated ColorX values = 2;
}

message FieldColor32 {
  string id = 1;
  Color32 value = 2;
}

message ArrayColor32 {
  string id = 1;
  repeated Color32 values = 2;
}

message FieldFloat2 {
  string id = 1;
  Float2 value = 2;
}

message ArrayFloat2 {
  string id = 1;
  repeated Float2 values = 2;
}

message FieldDouble2 {
  string id = 1;
  Double2 value = 2;
}

message ArrayDouble2 {
  string id = 1;
  repeated Double2 values = 2;
}

message FieldByte2 {
  string id = 1;
  Byte2 value = 2;
}

message ArrayByte2 {
  string id = 1;
  repeated Byte2 values = 2;
}

message FieldUshort2 {
  string id = 1;
  Ushort2 value = 2;
}

message ArrayUshort2 {
  string id = 1;
  repeated Ushort2 values = 2;
}

message FieldUint2 {
  string id = 1;
  Uint2 value = 2;
}

message ArrayUint2 {
  string id = 1;
  repeated Uint2 values = 2;
}

message FieldUlong2 {
  string id = 1;
  Ulong2 value = 2;
}

message ArrayUlong2 {
  string id = 1;
  repeated Ulong2 values = 2;
}

message FieldSbyte2 {
  string id = 1;
  Sbyte2 value = 2;
}

message ArraySbyte2 {
  string id = 1;
  repeated Sbyte2 values = 2;
}

message FieldShort2 {
  string id = 1;
  Short2 value = 2;
}

message ArrayShort2 {
  string id = 1;
  repeated Short2 values = 2;
}

message FieldInt2 {
  string id = 1;
  Int2 value = 2;
}

message ArrayInt2 {
  string id = 1;
  repeated Int2 values = 2;
}

message FieldLong2 {
  string id = 1;
  Long2 value = 2;
}

message ArrayLong2 {
  string id = 1;
  repeated Long2 values = 2;
}

message FieldBool2 {
  string id = 1;
  Bool2 value = 2;
}

message ArrayBool2 {
  string id = 1;
  repeated Bool2 values = 2;
}

message FieldFloat3 {
  string id = 1;
  Float3 value = 2;
}

message ArrayFloat3 {
  string id = 1;
  repeated Float3 values = 2;
}

message FieldDouble3 {
  string id = 1;
  Double3 value = 2;
}

message ArrayDouble3 {
  string id = 1;
  repeated Double3 values = 2;
}

message FieldByte3 {
  string id = 1;
  Byte3 value = 2;
}

message ArrayByte3 {
  string id = 1;
  repeated Byte3 values = 2;
}

message FieldUshort3 {
  string id = 1;
  Ushort3 value = 2;
}

message ArrayUshort3 {
  string id = 1;
  repeated Ushort3 values = 2;
}

message FieldUint3 {
  string id = 1;
  Uint3 value = 2;
}

message ArrayUint3 {
  string id = 1;
  repeated Uint3 values = 2;
}

message FieldUlong3 {
  string id = 1;
  Ulong3 value = 2;
}

message ArrayUlong3 {
  string id = 1;
  repeated Ulong3 values = 2;
}

message FieldSbyte3 {
  string id = 1;
  Sbyte3 value = 2;
}

message ArraySbyte3 {
  string id = 1;
  repeated Sbyte3 values = 2;
}

message FieldShort3 {
  string id = 1;
  Short3 value = 2;
}

message ArrayShort3 {
  string id = 1;
  repeated Short3 values = 2;
}

message FieldInt3 {
  string id = 1;
  Int3 value = 2;
}

message ArrayInt3 {
  string id = 1;
  repeated Int3 values = 2;
}

message FieldLong3 {
  string id = 1;
  Long3 value = 2;
}

message ArrayLong3 {
  string id = 1;
  repeated Long3 values = 2;
}

message FieldBool3 {
  string id = 1;
  Bool3 value = 2;
}

message ArrayBool3 {
  string id = 1;
  repeated Bool3 values = 2;
}

message FieldFloat4 {
  string id = 1;
  Float4 value = 2;
}

message ArrayFloat4 {
  string id = 1;
  repeated Float4 values = 2;
}

message FieldDouble4 {
  string id = 1;
  Double4 value = 2;
}

message ArrayDouble4 {
  string id = 1;
  repeated Double4 values = 2;
}

message FieldByte4 {
  string id = 1;
  Byte4 value = 2;
}

message ArrayByte4 {
  string id = 1;
  repeated Byte4 values = 2;
}

message FieldUshort4 {
  string id = 1;
  Ushort4 value = 2;
}

message ArrayUshort4 {
  string id = 1;
  repeated Ushort4 values = 2;
}

message FieldUint4 {
  string id = 1;
  Uint4 value = 2;
}

message ArrayUint4 {
  string id = 1;
  repeated Uint4 values = 2;
}

message FieldUlong4 {
  string id = 1;
  Ulong4 value = 2;
}

message ArrayUlong4 {
  string id = 1;
  repeated Ulong4 values = 2;
}

message FieldSbyte4 {
  string id = 1;
  Sbyte4 value = 2;
}

message ArraySbyte4 {
  string id = 1;
  repeated Sbyte4 values = 2;
}

message FieldShort4 {
  string id = 1;
  Short4 value = 2;
}

message ArrayShort4 {
  string id = 1;
  repeated Short4 values = 2;
}

message FieldInt4 {
  string id = 1;
  Int4 value = 2;
}

message ArrayInt4 {
  string id = 1;
  repeated Int4 values = 2;
}

message FieldLong4 {
  string id = 1;
  Long4 value = 2;
}

message ArrayLong4 {
  string id = 1;
  repeated Long4 values = 2;
}

message FieldBool4 {
  string id = 1;
  Bool4 value = 2;
}

message ArrayBool4 {
  string id = 1;
  repeated Bool4 values = 2;
}

message FieldFloatQ {
  string id = 1;
  FloatQ value = 2;
}

message ArrayFloatQ {
  string id = 1;
  repeated FloatQ values = 2;
}

message FieldDoubleQ {
  string id = 1;
  DoubleQ value = 2;
}

message ArrayDoubleQ {
  string id = 1;
  repeated DoubleQ values = 2;
}

message FieldFloat2x2 {
  string id = 1;
  Float2x2 value = 2;
}

message ArrayFloat2x2 {
  string id = 1;
  repeated Float2x2 values = 2;
}

message FieldDouble2x2 {
  string id = 1;
  Double2x2 value = 2;
}

message ArrayDouble2x2 {
  string id = 1;
  repeated Double2x2 values = 2;
}

message FieldFloat3x3 {
  string id = 1;
  Float3x3 value = 2;
}

message ArrayFloat3x3 {
  string id = 1;
  repeated Float3x3 values = 2;
}

message FieldDouble3x3 {
  string id = 1;
  Double3x3 value = 2;
}

message ArrayDouble3x3 {
  string id = 1;
  repeated Double3x3 values = 2;
}

message FieldFloat4x4 {
  string id = 1;
  Float4x4 value = 2;
}

message ArrayFloat4x4 {
  string id = 1;
  repeated Float4x4 values = 2;
}

message FieldDouble4x4 {
  string id = 1;
  Double4x4 value = 2;
}

message ArrayDouble4x4 {
  string id = 1;
  repeated Double4x4 values = 2;
}

